risc0/zirgen/dsl/test/repro/missing_base_back.zir
// RUN: not zirgen --emit=ast %s 2>&1 | FileCheck %s
// CHECK: error: missing base expression for back operation

component Top() {
  x := Reg(@1);
}

